# mini-blockchain

./: .gitignore  Cargo.toml  IMPROVEMENTS.md  README.md  blockchain.json
docs/superpowers/plans/: 2026-05-11-blockchain-improvements.md  2026-05-15-bip39-wallet.md  2026-05-15-clean-code-refactor.md
docs/superpowers/specs/: 2026-05-10-module-reorganization-design.md  2026-05-12-documentation-rename-design.md  2026-05-15-clean-code-refactor-design.md
src/: block.rs  blockchain.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  merkle.rs  merklee.rs  transactions.rs  types.rs  wallet.rs
src/api/: error.rs  mod.rs
src/api/handlers/: chain.rs  help.rs  mining.rs  mod.rs  transaction.rs  wallet.rs
src/chain/: block.rs  blockchain.rs  merkle.rs
src/cli/: commands.rs  mod.rs  parser.rs
src/crypto/: transaction.rs  wallet.rs
src/node/: behaviour.rs  commands.rs  events.rs  mod.rs
