[package]
name = "mini_blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1.0"
bip39 = { version = "2.0", features = ["rand"] }
sha2 = "0.10"
hex = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.5"
clap = { version = "4", features = ["derive"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aes-gcm = "0.10"
libp2p = { version = "0.54", features = ["mdns", "gossipsub", "tokio", "tcp", "noise", "yamux", "macros", "request-response", "cbor"] }